--- a/radiant-player-mac/css/yosemite.css
+++ b/radiant-player-mac/css/yosemite.css
@@ -128,7 +128,7 @@ body {
 
 .song-row .rating-container.stars {
     height: 100% !important;
-    margin-top: 0px !important;
+    line-height: 50%;
 }
 
 .song-row .rating-container.thumbs [data-rating] {
@@ -254,6 +254,14 @@ body {
 .player-middle {
     padding: 3px 0 0 0;
     margin: 0;
+}
+
+#playerSongInfo {
+    overflow: hidden;
+}
+
+#playerSongInfo .text-wrapper #playerSongTitle {
+    margin-right: 110px;
 }
 
 #player .flat-button, #player .flat-button:hover, #player .flat-button:active {
